new-footer-and-button

--- a/index.html
+++ b/index.html
@@ -17,19 +17,22 @@
     </ul>
 </nav>
 <section id="работы">
-   <div class="carousel-container">
-       <div class="carousel">
-           <div class="carousel-slide">
-               <img src="img/beach-photoshoot-cabo-photographer-flytographer-1.jpeg">
-           </div>
-           <div class="carousel-slide">
-               <img src="img/photographer-for-maternity-shoot-1200x900.jpg">
-           </div>
-           <div class="carousel-slide">
-               <img src="img/subject-model-photoshoot-feature.webp">
-           </div>
-       </div>
-   </div>
+    <div class="carousel">
+        <div class="carousel-item">
+            <img src="img/beach-photoshoot-cabo-photographer-flytographer-1.jpeg" alt="Первое изображение">
+            <div class="caption">Первое изображение</div>
+        </div>
+        <div class="carousel-item">
+            <img src="img/photographer-for-maternity-shoot-1200x900.jpg" alt="Второе изображение">
+            <div class="caption">Второе изображение</div>
+        </div>
+        <div class="carousel-item">
+            <img src="img/subject-model-photoshoot-feature.webp" alt="Третье изображение">
+            <div class="caption">Третье изображение</div>
+        </div>
+        <button class="prev">❮</button>
+        <button class="next">❯</button>
+    </div>
 </section>
 <section id="резюме">
     <h1>Резюме</h1>
@@ -48,11 +51,24 @@
     <p>Имя автора</p>
 </section>
 <section id="заказать">
-    <h1>Заказать</h1>
-    <button>Заказать фотосессию</button>
+    <div class="order-container">
+        <button class="my-button">Заказать фотосессию</button>
+    </div>
 </section>
 <footer>
-    <p>Контакты: ваш номер телефона, email</p>
+   <div class="footer-content">
+       <h3>site name</h3>
+       <p>description site</p>
+       <ul class="social">
+           <li><a href="https://t.me/alienchuux">Telegram</a><li>
+           <li><a href="#">Facebook</a><li>
+           <li><a href="#">Facebook</a><li>
+       </ul>
+   </div>
+    <div class="footer-bottom">
+        <p>2023 all rights</p>
+    </div>
 </footer>
+<script src="hello.js"></script>
 </body>
 </html>
